# byocvpn

./: Cargo.toml  README.md  wg0.conf
.github/: copilot-instructions.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: connect.rs  disconnect.rs  list.rs  setup.rs  spawn.rs  spawn_daemon.rs  terminate.rs
crates/core/: Cargo.toml  wg0.conf
crates/core/src/: cloud_provider.rs  commands.rs  config.rs  connectivity.rs  credentials.rs  crypto.rs  daemon.rs  daemon_client.rs  error.rs  ipc.rs  ledger.rs  lib.rs  metrics_stream.rs  retry.rs  tunnel.rs  tunnel_manager.rs  types.rs  wireguard_config.rs
crates/core/src/commands/: connect.rs  disconnect.rs  list.rs  mod.rs  setup.rs  spawn.rs  spawn_daemon.rs  status.rs  subscribe.rs  terminate.rs  verify_permissions.rs
crates/core/src/error/: compute.rs  config.rs  credentials.rs  daemon.rs  mod.rs  network.rs  system.rs
crates/core/src/ipc/: mod.rs  unix.rs  windows.rs
crates/core/src/templates/: client_config.hbs  status_server.py
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: constants.rs  daemon.rs  daemon_client.rs  dns_macos.rs  error.rs  lib.rs  main.rs  tunnel_manager.rs
crates/daemon/src/firewall/: linux.rs  macos.rs  mod.rs  windows.rs
crates/daemon/src/routing/: dns_linux.rs  dns_macos.rs  dns_windows.rs  interface.rs  mod.rs  routes.rs
crates/daemon/src/routing/dns/: dns_linux.rs  dns_macos.rs  dns_windows.rs  mod.rs
crates/daemon/src/vpn/: config.rs  connect.rs  disconnect.rs  metrics.rs  mod.rs  restore.rs  session.rs  status.rs
crates/infra/aws/: Cargo.toml  wg0.conf
crates/infra/aws/src/: aws_error.rs  cloud_init.rs  config.rs  constants.rs  credentials.rs  error.rs  instance.rs  lib.rs  network.rs  pricing.rs  provider.rs  ssm_error.rs  startup_script.rs  state.rs
crates/infra/aws/src/templates/: server_startup_script.sh.hbs  user_data.hbs  wireguard_server_config.hbs
crates/infra/azure/: Cargo.toml
crates/infra/azure/src/: auth.rs  client.rs  cloud_init.rs  credentials.rs  instance.rs  lib.rs  models.rs  network.rs  pricing.rs  provider.rs  startup_script.rs  state.rs
crates/infra/azure/src/templates/: server_startup_script.sh.hbs  startup_script.sh.hbs
crates/infra/gcp/: Cargo.toml
crates/infra/gcp/src/: auth.rs  client.rs  cloud_init.rs  credentials.rs  instance.rs  lib.rs  models.rs  network.rs  pricing.rs  provider.rs  startup_script.rs  state.rs
crates/infra/gcp/src/templates/: server_startup_script.sh.hbs  startup_script.sh.hbs
crates/infra/oracle/: Cargo.toml
crates/infra/oracle/src/: auth.rs  client.rs  cloud_init.rs  credentials.rs  instance.rs  lib.rs  models.rs  network.rs  pricing.rs  provider.rs  startup_script.rs  state.rs
crates/infra/oracle/src/templates/: server_startup_script.sh.hbs  user_data.hbs  wireguard_server_config.hbs
crates/ui/: index.html  package-lock.json  package.json
crates/ui/src/: App.css  App.tsx
crates/ui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/ui/src-tauri/capabilities/: default.json
crates/ui/src-tauri/icons/: icon.icns
crates/ui/src-tauri/src/: commands.rs  ledger_store.rs  lib.rs  main.rs  provider_credentials.rs  provider_store.rs  server_monitor.rs  settings_store.rs  spawn_job_registry.rs  tray.rs  uptime_notifier.rs
crates/ui/src-tauri/wix/: service.wxs
crates/ui/src/components/: FlagIcon.tsx  VpnPage.tsx
crates/ui/src/components/common/: Drawer.tsx  EmptyState.tsx  ErrorBoundary.tsx  JobProgressDrawer.tsx  LoadingScreen.tsx  LoadingSpinner.tsx  MetricsDisplay.tsx  Navbar.tsx  PermissionsPanel.tsx
crates/ui/src/components/instances/: InstanceCard.tsx  InstanceList.tsx
crates/ui/src/components/pricing/: InstanceCostRow.tsx  MonthFilter.tsx  PricingAccordion.tsx  ProviderFilter.tsx
crates/ui/src/components/primitives/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Drawer.tsx  EmptyState.tsx  FilterChip.tsx  FormField.tsx  IconButton.tsx  NavItem.tsx  SelectableCard.tsx  Spinner.tsx  Toggle.tsx  index.ts
crates/ui/src/components/providers/: ProviderIcon.tsx  ProviderSelector.tsx
crates/ui/src/components/regions/: RegionCard.tsx  RegionGroupComponent.tsx  RegionList.tsx  RegionSelector.tsx
crates/ui/src/components/servers/: ServerCard.tsx  ServerDetails.tsx  ServerList.tsx
crates/ui/src/components/settings/: AppearanceCard.tsx  AutoTerminateSettingsCard.tsx  AwsProfileCard.tsx  AzureProfileCard.tsx  CredentialsModal.tsx  DurationField.tsx  GcpProfileCard.tsx  KillSwitchSettingsCard.tsx  NotificationSettingsCard.tsx  OracleProfileCard.tsx  ProvisionAccountDrawer.tsx  SessionKillswitchCard.tsx  SettingsButton.tsx  StepProgressDrawer.tsx
crates/ui/src/components/vpn/: ConnectedView.tsx  ServerManagementView.tsx
crates/ui/src/constants/: regionInfo.ts
crates/ui/src/contexts/: ErrorLogContext.tsx  InstancesContext.tsx  RegionsContext.tsx  VpnConnectionContext.tsx  index.ts
crates/ui/src/hooks/: index.ts  useAccounts.ts  useCredentials.ts  useDaemonInstaller.ts  useInstances.ts  useLedger.ts  usePermissions.ts  useProfile.ts  useProviderRegions.ts  useRegions.ts  useSpawnInstance.ts  useTerminateInstance.ts  useTheme.ts  useVpnConnection.ts  useVpnMetrics.ts
crates/ui/src/lib/: bytes.ts  commandErrorStore.ts  invokeCommand.ts  providers.ts  time.ts
crates/ui/src/pages/: AddAccountPage.tsx  DaemonSetupPage.tsx  ErrorLogPage.tsx  ErrorsPage.tsx  LandingPage.tsx  PricingPage.tsx  SettingsPage.tsx  SetupPage.tsx  VpnPage.tsx  index.ts
crates/ui/src/types/: aws.ts  index.ts  instances.ts  job.ts  ledger.ts  pages.ts  permissions.ts  providers.ts  regionInfo.ts  regions.ts  settings.ts  vpn.ts
scripts/: byocvpn-daemon.service  com.byocvpn.daemon.dev.plist  com.byocvpn.daemon.plist  install.sh  migrate_logging.py
scripts/deb-scripts/: postinst  postrm  prerm
scripts/pkg-scripts/: postinstall
scripts/uninstaller-pkg-scripts/: postinstall
