[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/cli",
    "crates/ui/src-tauri",
    "crates/infra/aws",
    "crates/infra/oracle",
    "crates/infra/gcp",
    "crates/infra/azure",
]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
base64 = "0.22.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
# Use rand 0.8 to match Tauri's ecosystem
rand = "0.8"
handlebars = "6.3.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"


[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256
lto = false
panic = "abort"
