[package]
name = "byocvpn_core"
version = "0.1.0"
edition = "2024"

[dependencies]

rand = "0.8"
base64 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rust-ini = "0.21.1"
net-route = "0.4.6"
tun = { version = "0.7.19", features = ["async"] }
ipnet = "2.11.0"
boringtun = "0.6.0"
anyhow = "1.0.0"
once_cell = "1.21.3"
pnet = "0.35.0"
