[package]
name = "byocvpn_core"
version = "0.1.0"
edition = "2024"

[dependencies]

thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-ini = "0.21.3"
net-route = "0.4.6"
ipnet = "2.11.0"
boringtun = "0.6.0"
once_cell = "1.21.3"
tun-rs = { version = "2.7.3", features = ["async_tokio"] }
dirs = "6.0.0"
rand = { workspace = true }
