[package]
name = "byocvpn_core"
version.workspace = true
edition = "2024"

[dependencies]

thiserror = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-ini = "0.21.3"
net-route = "0.4.6"
ipnet = { version = "2.11.0", features = ["serde"] }

boringtun = "0.6.0"
once_cell = "1.21.3"
tun-rs = { version = "2.7.3", features = ["async_tokio"] }
dirs = "6.0.0"
rand = { workspace = true }
handlebars = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
strum = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
] }
