[package]
name = "byocvpn_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
byocvpn_core = { path = "../core" }
base64 = { workspace = true }
boringtun = "0.6.0"
rust-ini = "0.21.3"
ipnet = "2.10.1"
net-route = "0.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tun-rs = { version = "2.7.3", features = ["async_tokio"] }
once_cell = "1.21.3"
dirs = "6.0.0"
