[package]
name = "byocvpn_aws"
version = "0.1.0"
edition = "2024"

[dependencies]
byocvpn_core = { path = "../../core" }
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.121.1"
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
base64 = "0.22.1"
