[package]
name = "byocvpn_aws"
version = "0.1.0"
edition = "2024"

[dependencies]
byocvpn_core = { path = "../../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.129"
aws-sdk-ssm = "1.75.0"
