[package]
name = "byocvpn_aws"
version = "0.1.0"
edition = "2024"

[dependencies]
byocvpn_core = { path = "../../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.175"
aws-sdk-ssm = "1.97.0"
aws-credential-types = "1.2.8"
serde = { workspace = true }
serde_json = { workspace = true }
handlebars = { workspace = true }
