[package]
name = "byocvpn_azure"
version = "0.1.0"
edition = "2024"

[dependencies]
byocvpn_core = { path = "../../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
handlebars = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
# Official Azure Identity library — ClientSecretCredential for service principal auth.
azure_identity = "0.32"
# azure_core provides the Secret type and TokenCredential trait.
azure_core = { version = "0.32", default-features = false }
chrono = { workspace = true }
