[package]
name = "byocvpn_oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
byocvpn_core = { path = "../../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
handlebars = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
