[package]
name = "ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
byocvpn_core = { path = "../../core" }
byocvpn_aws = { path = "../../infra/aws" }
byocvpn_oracle = { path = "../../infra/oracle" }
byocvpn_gcp = { path = "../../infra/gcp" }
byocvpn_azure = { path = "../../infra/azure" }
byocvpn_daemon = { path = "../../daemon" }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
